--- a/ProjetodeGraduacao/ProjetoFelipeClaudio/ApendiceA.tex
+++ b/ProjetodeGraduacao/ProjetoFelipeClaudio/ApendiceA.tex
@@ -69,7 +69,7 @@
 				
 				\includegraphics[width=\textwidth]{sinal_completo_t2.jpg}
 				
-				\caption[\small{Sinal completo.}]{\label{completoT2} \small{Sinal completo.}}
+				\caption[\small{Comparação entre o sinal original e o resultado obtido.}]{\label{completoT2} \small{Comparação entre o sinal original e o resultado obtido.}}
 				
 			\end{center}
 		}	
@@ -146,7 +146,7 @@
 				
 				\includegraphics[width=\textwidth]{sinal_completo_t3.jpg}
 				
-				\caption[\small{Sinal completo.}]{\label{completoT3} \small{Sinal completo.}}
+				\caption[\small{Comparação entre o sinal original e o resultado obtido.}]{\label{completoT3} \small{Comparação entre o sinal original e o resultado obtido.}}
 				
 			\end{center}
 		}	
@@ -223,7 +223,7 @@
 				
 				\includegraphics[width=\textwidth]{sinal_completo_t4.jpg}
 				
-				\caption[\small{Sinal completo.}]{\label{completoT4} \small{Sinal completo.}}
+				\caption[\small{Comparação entre o sinal original e o resultado obtido.}]{\label{completoT4} \small{Comparação entre o sinal original e o resultado obtido.}}
 				
 			\end{center}
 		}	
@@ -301,7 +301,7 @@
 				
 				\includegraphics[width=\textwidth]{sinal_completo_t5.jpg}
 				
-				\caption[\small{Sinal completo.}]{\label{completoT5} \small{Sinal completo.}}
+				\caption[\small{Comparação entre o sinal original e o resultado obtido.}]{\label{completoT5} \small{Comparação entre o sinal original e o resultado obtido.}}
 				
 			\end{center}
 		}	
@@ -378,7 +378,7 @@
 				
 				\includegraphics[width=\textwidth]{sinal_completo_t6.jpg}
 				
-				\caption[\small{Sinal completo.}]{\label{completoT6} \small{Sinal completo.}}
+				\caption[\small{Comparação entre o sinal original e o resultado obtido.}]{\label{completoT6} \small{Comparação entre o sinal original e o resultado obtido.}}
 				
 			\end{center}
 		}	
@@ -455,7 +455,7 @@
 				
 				\includegraphics[width=\textwidth]{sinal_completo_t7.jpg}
 				
-				\caption[\small{Sinal completo.}]{\label{completoT7} \small{Sinal completo.}}
+				\caption[\small{Comparação entre o sinal original e o resultado obtido.}]{\label{completoT7} \small{Comparação entre o sinal original e o resultado obtido.}}
 				
 			\end{center}
 		}	
@@ -532,7 +532,7 @@
 				
 				\includegraphics[width=\textwidth]{sinal_completo_t8.jpg}
 				
-				\caption[\small{Sinal completo.}]{\label{completoT8} \small{Sinal completo.}}
+				\caption[\small{Comparação entre o sinal original e o resultado obtido.}]{\label{completoT8} \small{Comparação entre o sinal original e o resultado obtido.}}
 				
 			\end{center}
 		}	
@@ -609,7 +609,7 @@
 				
 				\includegraphics[width=\textwidth]{sinal_completo_t9.jpg}
 				
-				\caption[\small{Sinal completo.}]{\label{completoT9} \small{Sinal completo.}}
+				\caption[\small{Comparação entre o sinal original e o resultado obtido.}]{\label{completoT9} \small{Comparação entre o sinal original e o resultado obtido.}}
 				
 			\end{center}
 		}	
@@ -686,7 +686,7 @@
 				
 				\includegraphics[width=\textwidth]{sinal_completo_t3.jpg}
 				
-				\caption[\small{Sinal completo.}]{\label{completoT10} \small{Sinal completo.}}
+				\caption[\small{Comparação entre o sinal original e o resultado obtido.}]{\label{completoT10} \small{Comparação entre o sinal original e o resultado obtido.}}
 				
 			\end{center}
 		}	
