--- a/ProjetodeGraduacao/ProjetoFelipeClaudio/cap6.tex
+++ b/ProjetodeGraduacao/ProjetoFelipeClaudio/cap6.tex
@@ -1,10 +1,10 @@
  \paragraph{}Neste trabalho foi proposto um modelo baseado em redes neurais, com o objetivo de prever o valor médio do PLD para alguns meses a frente. Para isso, foi necessária a decomposição do sinal, deixando para o treinamento da rede somente a parte não-determinística. Foram testados diferentes métodos de extração das componentes até chegar na que foi utilizada no Capítulo 5. Além disso, as MLPs foram treinadas para quantidades variadas de neurônios na camada intermediária, buscando a melhor arquitetura que solucionasse o problema proposto.
  
- \paragraph{}Diante dos resultados obtidos com o trabalho, observou-se a dificuldade em utilizar redes neurais MLP para conjuntos de dados pequenos. Apesar disso, atingiu-se os objetivos mencionados no começo do projeto. 
-  
- \paragraph{}O método utilizado para o pré-processamento dos dados pode ser replicado para outros tipos de séries temporais, assim como o método para a seleção da melhor rede pode ser explorado em outros trabalhos.
+  \paragraph{}Ao final do projeto, obteve-se um método de seleção do número de neurônios para MLPs com uma camada escondida e quantidade de dados reduzida. Além disso, a própria extração das componentes, pode trazer valor se analisada com cuidado, pois a tendência, sazonalidade e ciclos senoidais podem a ajudar no entendimento dos fenômenos observado na curva do PLD.
  
- \paragraph{}Quanto às conclusões obtidas através do experimento, observou-se que o erro tem uma tendência crescente conforme o número de meses a frente na previsão, assim como esperado, tornando cada vez mais complexa a utilização do modelo para cenário muito distantes. A aplicação da rede para correção dos erros trouxe para a previsão um compromisso entre erro máximo e médio, conforme a arquitetura escolhida.
+ \paragraph{}Devido ao fato do modelo ter erros de estimação relativamente elevados, não é possível utilizar o mesmo de forma a obter lucro. Apesar disso, pode-se usar o mesmo em outras aplicações, como por exemplo, análise de relevância das variáveis de entrada. Há também a possibilidade de realizar previsões sobre os patamares dos valores, assim como visto na figura \ref{ClassesPrevisao}.
+ 
+ \paragraph{}Quanto às conclusões obtidas através do experimento, observou-se que o erro tem uma tendência crescente conforme o número de meses à frente, assim como esperado. Isso torna cada vez mais complexa a utilização do modelo para cenário muito distantes. A aplicação da rede para correção dos erros trouxe para a previsão um compromisso entre erro máximo e médio, conforme a arquitetura escolhida.
  
  \paragraph{}Para trabalhos futuros, seria interessante comparar os resultados obtidos com modeos diferentes, como por exemplo, SARIMA e GARCH e ADALASSO. Além disso, podem ser exploradas outras formas de extração das componentes da série temporal, de forma a obter um sinal residual com menos energia dos que os que foram encontrados.
  
