--- a/ProjetodeGraduacao/ProjetoFelipeClaudio/Capa.tex
+++ b/ProjetodeGraduacao/ProjetoFelipeClaudio/Capa.tex
@@ -81,7 +81,7 @@ Examinador:
             \hrulefill
 
             \vspace{-.375cm}
-            \centering{Flávio Luis de Mello}
+            \centering{Flávio Luis de Mello, D.Sc.}
 
             \vspace{0.1cm}
          }
@@ -94,7 +94,7 @@ Examinador:
             \hrulefill
 
             \vspace{-.375cm}
-            \centering{Carlous Jourdan Gadelha Vieira}
+            \centering{Luiz Henrique Ramos de Azevedo Évora, D.Sc.}
 
             \vspace{0.1cm}
          }
